- center align text in concepts - fixed issue with dual relationships not rendering correctly on load - still cannot load js mentalmap files into flash mentalmapper (this will probably never be supported)

--- a/src/components/Concept/Concept.less
+++ b/src/components/Concept/Concept.less
@@ -189,6 +189,7 @@
             cursor: pointer;
             resize: none;
             z-index: 2;
+            text-align: center;
             
             // foundation.css overrides
             box-shadow: none !important;
